<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_movie_poster"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_movie_title"
        style="@style/Theme.MovieCatalogue.BigBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/movie_title"
        app:layout_constraintBottom_toTopOf="@+id/tv_movie_rating"
        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
        app:layout_constraintTop_toTopOf="@+id/iv_movie_poster" />

    <TextView
        android:id="@+id/tv_movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/movie_rating"

        app:layout_constraintBottom_toTopOf="@+id/tv_movie_release_year"
        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

    <TextView
        android:id="@+id/tv_movie_release_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/movie_release_year"
        app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_rating" />

</androidx.constraintlayout.widget.ConstraintLayout>